--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.5.0/cerulean/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" >
 <link rel="stylesheet" href="assets/css/style.css">
 <title>Lets Go Vegan</title>
 </head>
 <body>
+<!--------------------------- Header Section including Picture Name and Navigation -->
+    <header>
+        <div class="row">
+        </div>    
+    </header>
 
+<!--------------------------- Main section - middle of page -->
+    <section>
+        <div class="row">
+        </div>   
+    </section>
+
+<!--------------------------- Footer Section -->
+    <footer class="container-fluid">
+        <div class="row" >
+        </div>   
+    </footer>
+
+ <!--------------------------- Do I need these? -->   
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
