--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 <body>
 <!--------------------------- Header Section including logo and Navigation -->
     <header class="container-fluid">
-       <nav class="navbar navbar-light text-success">
+       <nav class="navbar navbar-expand-md navbar-light text-success">
             <a class="navbar-brand" href="index.html"><img src="assets/images/frog-pixabay.jpg" alt="logo frog pic" height="70px" width="70px"></a>
-            <div>
-                <ul class="navbar justify-content-end">
-                    <li class="nav-item">
+            <button class="navbar-toggler-md" type="button" data-toggle="collapse-lg" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" 
+            aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="">
+                <ul class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <li class="nav-item active">
                         <a class="nav-link" href="index.html">Home </a>
                     </li>
                     <li class="nav-item">
