logo left menu right

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
 <!--------------------------- Header Section including logo and Navigation -->
     <header class="container-fluid">
-       <nav class="navbar navbar-expand-md navbar-light text-success">
-            <a class="navbar-brand" href="index.html"><img src="assets/images/frog-pixabay.jpg" alt="logo frog pic" height="70px" width="70px"></a>
-            <button class="navbar-toggler-md" type="button" data-toggle="collapse-lg" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" 
+       <nav class="navbar navbar-expand-sm navbar-light text-success justify-content-end">
+            <a class="navbar-brand mr-auto" href="index.html"><img src="assets/images/frog-pixabay.jpg" alt="logo frog pic" height="70px" width="70px"></a>
+            <button class="navbar-toggler-sm" type="button" data-toggle="collapse-sm" data-target="#navbarToggler" aria-controls="navbarToggler" 
             aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
             </button>
             <div class="">
-                <ul class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <ul class="navbar-nav mr-auto" id="navbarToggler">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Home </a>
                     </li>
