--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
 <body>
 <!--------------------------- Header Section including logo and Navigation -->
     <header class="container-fluid">
-       <nav class="navbar navbar-expand-sm navbar-light text-success justify-content-end">
+       <nav class="navbar navbar-expand-sm navbar-light justify-content-end">
             <a class="navbar-brand mr-auto" href="index.html"><img src="assets/images/frog-pixabay.jpg" alt="logo frog pic" height="70px" width="70px"></a>
-            <button class="navbar-toggler-sm" type="button" data-toggle="collapse-sm" data-target="#navbarToggler" aria-controls="navbarToggler" 
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" 
             aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
             </button>
-            <div class="">
-                <ul class="navbar-nav mr-auto" id="navbarToggler">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
+                <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Home </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="whyvegan.html">Why </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="food.html">Recipe </a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="join.html">Challenge </a>
                     </li>
                 </ul> 
             </div>
