--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!--------------------------- Header Section including logo and Navigation -->
     <header class="container-fluid">
        <nav class="navbar navbar-expand-sm navbar-light justify-content-end">
-            <a class="navbar-brand mr-auto" href="index.html"><img src="assets/images/frog-pixabay.jpg" alt="logo frog pic" height="70px" width="70px"></a>
+            <a class="navbar-brand mr-auto" href="index.html"><img src="assets/images/vegan-logo.png" alt="vegan logo" height="70px" width="70px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" 
             aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
             </button>
