--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 <!--------------------------- Header Section including logo and Navigation -->
     <header class="container-fluid">
-       <nav class="navbar navbar-expand-sm navbar-light justify-content-end">
+       <nav class="navbar navbar-expand-sm navbar-light">
             <a class="navbar-brand mr-auto" href="index.html"><img src="assets/images/vegan-logo.png" alt="vegan logo" height="70px" width="70px"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" 
+            <button class="navbar-toggler btn btn-secondary" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" 
             aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
@@ -35,13 +35,15 @@
                     </li>
                 </ul> 
             </div>
-        </nav>
+         </nav>
+         <h1 class="nav-head">Lets Go Vegan!</h1>
     </header>
 
 <!--------------------------- Main section - middle of page -->
     <div class="container-fluid">
     <section>
         <div class="row">
+         
         </div>   
     </section>
     </div>
