put nav heading in a container so only display on mobile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
                 </ul> 
             </div>
          </nav>
-         <h1 class="nav-head">Lets Go Vegan!</h1>
+         <div class="container-fluid">
+			<div class="row">
+			    <div class="col-12">
+                    <h1 class="nav-head d-sm-none">Lets Go Vegan!</h1> <!--Only show on mobile-->
+			    </div>
+			</div>
+         </div>   
     </header>
 
 <!--------------------------- Main section - middle of page -->
