add link to mobile title

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 </ul> 
             </div>
          </nav>
-         <div class="container-fluid">
+         <div class="container-fluid"> <!--Only show on mobile-->
 			<div class="row">
 			    <div class="col-12">
-                    <h1 class="nav-head d-sm-none">Lets Go Vegan!</h1> <!--Only show on mobile-->
-			    </div>
+                    <a class="nav-head d-sm-none" href="whyvegan.html"><h1>Lets Go Vegan!</h1> </a>
+			    </div>      
 			</div>
          </div>   
     </header>
