--- a/index.html
+++ b/index.html
@@ -85,20 +85,17 @@
     <!--------------------------- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
-        <div class="col-sm-2">
-        <a href="#" target="_blank">
-                <i class="fa fa-paper-plane" aria-hidden="true"></i>
-                <span class="sr-only">Contact</span>
-              </a>
+        <div class="col-sm-4">
+            <a href="#" target="_blank"><i class="fa fa-paper-plane" aria-hidden="true"></i>
+                <span class="sr-only">Contact</span></a>
         </div>
-        <div class="col-sm-4"></div>
+         <div class="col-sm-4">
+         </div>
         <div class="col-sm-4">
           <ul class="list-inline social-links">
            <li class="list-inline-item">
-              <a href="#" target="_blank">
-                <i class="fa fa-youtube" aria-hidden="true"></i>
-                <span class="sr-only">YouTube</span>
-              </a>
+              <a href="#" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i>
+                <span class="sr-only">YouTube</span></a>
             </li>
               <li class="list-inline-item">
               <a href="#" target="_blank">
