playing with footer

--- a/index.html
+++ b/index.html
@@ -85,13 +85,11 @@
     <!--------------------------- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
-        <div class="col-sm-4">
+        <div class="col-12 col-sm-6" id="contact-icon">
             <a href="#" target="_blank"><i class="fa fa-paper-plane" aria-hidden="true"></i>
                 <span class="sr-only">Contact</span></a>
         </div>
-         <div class="col-sm-4">
-         </div>
-        <div class="col-sm-4">
+         <div class="col-sm-6">
           <ul class="list-inline social-links">
            <li class="list-inline-item">
               <a href="#" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i>
