add hover colour to footer

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
         </div>
       </div>
     </header>
-
     <!--------------------------- Main section - middle of page -->
     <div class="container-fluid">
       <section>
@@ -85,29 +84,33 @@
     <!--------------------------- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
-        <div class="col-12 col-sm-6" id="contact-icon">
-            <a href="#" target="_blank"><i class="fa fa-paper-plane" aria-hidden="true"></i>
-                <span class="sr-only">Contact</span></a>
+        <div class="col-sm-1 social-links">
+          <a href="#" target="_blank"
+            ><i class="fa fa-paper-plane" aria-hidden="true"></i>
+            <span class="sr-only">Contact</span></a
+          >
         </div>
-         <div class="col-sm-6">
+        <div class="col-sm-8"></div>
+        <div class="col-sm-3">
           <ul class="list-inline social-links">
-           <li class="list-inline-item">
-              <a href="#" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i>
-                <span class="sr-only">YouTube</span></a>
-            </li>
-              <li class="list-inline-item">
-              <a href="#" target="_blank">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-                <span class="sr-only">Twitter</span>
-              </a>
+            <li class="list-inline-item">
+              <a href="#" target="_blank"
+                ><i class="fa fa-youtube" aria-hidden="true"></i>
+                <span class="sr-only">YouTube</span></a
+              >
             </li>
             <li class="list-inline-item">
-              <a href="#" target="_blank">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-                <span class="sr-only">Facebook</span>
-              </a>
+              <a href="#" target="_blank"
+                ><i class="fa fa-twitter" aria-hidden="true"></i>
+                <span class="sr-only">Twitter</span></a
+              >
             </li>
-                   
+            <li class="list-inline-item">
+              <a href="#" target="_blank"
+                ><i class="fa fa-facebook" aria-hidden="true"></i>
+                <span class="sr-only">Facebook</span></a
+              >
+            </li>
           </ul>
         </div>
       </div>
