navbar color for active and non active plus hover

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <footer class="container-fluid">
       <div class="row footer-row">
         <div class="col-sm-1 social-links">
-          <a href="#" target="_blank"
+          <a href="join.html" 
             ><i class="fa fa-paper-plane" aria-hidden="true"></i>
             <span class="sr-only">Contact</span></a
           >
@@ -94,19 +94,19 @@
         <div class="col-sm-3">
           <ul class="list-inline social-links">
             <li class="list-inline-item">
-              <a href="#" target="_blank"
+              <a href="https://m.youtube.com/playlist?list=PL3D58119F10C2B9A2" target="_blank"
                 ><i class="fa fa-youtube" aria-hidden="true"></i>
                 <span class="sr-only">YouTube</span></a
               >
             </li>
             <li class="list-inline-item">
-              <a href="#" target="_blank"
+              <a href="https://twitter.com/twitter" target="_blank"
                 ><i class="fa fa-twitter" aria-hidden="true"></i>
                 <span class="sr-only">Twitter</span></a
               >
             </li>
             <li class="list-inline-item">
-              <a href="#" target="_blank"
+              <a href="https://www.facebook.com/facebook" target="_blank"
                 ><i class="fa fa-facebook" aria-hidden="true"></i>
                 <span class="sr-only">Facebook</span></a
               >
