--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!--------------------------- Main section - middle of page -->
     <div class="container-fluid">
       <section>
-        <div class="row"></div>
+        <div class="row">home</div>
       </section>
     </div>
 
