--- a/join.html
+++ b/join.html
@@ -1,18 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Title</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/15a3b949c3.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Lets Go Vegan</title>
+  </head>
+  <body>
+    <!--------------------------- Header Section including logo and Navigation -->
+    <header class="container-fluid">
+      <nav class="navbar navbar-expand-sm navbar-light">
+        <a class="navbar-brand mr-auto" href="index.html"
+          ><img
+            src="assets/images/vegan-logo.png"
+            alt="vegan logo"
+            height="70px"
+            width="70px"
+        /></a>
+        <button
+          class="navbar-toggler btn btn-secondary"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarToggler"
+          aria-controls="navbarToggler"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarToggler"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="whyvegan.html">Why </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="food.html">Recipe </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="join.html">Challenge </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="container-fluid">
+        <!--Only show on mobile-->
+        <div class="row">
+          <div class="col-12">
+            <a class="nav-head d-sm-none" href="whyvegan.html"
+              ><h1>Lets Go Vegan!</h1>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!--------------------------- Main section - middle of page -->
+    <div class="container-fluid">
+      <section>
+        <div class="row">Join</div>
+      </section>
+    </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-</body>
+    <!--------------------------- Footer Section -->
+    <footer class="container-fluid">
+      <div class="row footer-row">
+        <div class="col-sm-1 social-links">
+          <a href="join.html" 
+            ><i class="fa fa-paper-plane" aria-hidden="true"></i>
+            <span class="sr-only">Contact</span></a
+          >
+        </div>
+        <div class="col-sm-8"></div>
+        <div class="col-sm-3">
+          <ul class="list-inline social-links">
+            <li class="list-inline-item">
+              <a href="https://m.youtube.com/playlist?list=PL3D58119F10C2B9A2" target="_blank"
+                ><i class="fa fa-youtube" aria-hidden="true"></i>
+                <span class="sr-only">YouTube</span></a
+              >
+            </li>
+            <li class="list-inline-item">
+              <a href="https://twitter.com/twitter" target="_blank"
+                ><i class="fa fa-twitter" aria-hidden="true"></i>
+                <span class="sr-only">Twitter</span></a
+              >
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/facebook" target="_blank"
+                ><i class="fa fa-facebook" aria-hidden="true"></i>
+                <span class="sr-only">Facebook</span></a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+
+    <!--------------------------- Do I need these? -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  </body>
 </html>
