why pictures and initial text

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -77,7 +77,24 @@
     <!--------------------------- Main section - middle of page -->
     <div class="container-fluid">
       <section>
-        <div class="row">why vegan</div>
+        <div class="row no-gutters why-details">
+            <div class="col-sm-4">
+                <img src="assets/images/baby-foxes-pixabay.jpg" class="why-pictures" alt="foxes pic"/>
+                <h3>For the Animals</h3>
+               <span>animal detail</span>
+            </div>
+            <div class="col-sm-4 why-details">
+                <img src="assets/images/nature-trees-unsplash.jpg" class="why-pictures" alt="nature trees pic"/>
+                <h3>For the Planet</h3>
+               <span>Planet detail</span>
+            </div>
+            <div class="col-sm-4 why-details">
+                <img src="assets/images/rainbow-food-pexels.jpg" class="why-pictures" alt="rainbow of food pic"/>
+                <h3>For Your Health</h3>
+               <span>Health detail</span>
+            </div>
+        </div>
+        
       </section>
     </div>
 
