keep footer at bottom and spaced

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -77,21 +77,27 @@
     <!--------------------------- Main section - middle of page -->
     <div class="container-fluid">
       <section>
-        <div class="row no-gutters why-details">
+        <div class="row no-gutters">
             <div class="col-sm-4">
                 <img src="assets/images/baby-foxes-pixabay.jpg" class="why-pictures" alt="foxes pic"/>
+                <div class="why-text">
                 <h3>For the Animals</h3>
                <span>animal detail</span>
+                </div>
             </div>
-            <div class="col-sm-4 why-details">
+            <div class="col-sm-4">
                 <img src="assets/images/nature-trees-unsplash.jpg" class="why-pictures" alt="nature trees pic"/>
+                <div class="why-text">
                 <h3>For the Planet</h3>
                <span>Planet detail</span>
+                </div>
             </div>
-            <div class="col-sm-4 why-details">
+            <div class="col-sm-4">
                 <img src="assets/images/rainbow-food-pexels.jpg" class="why-pictures" alt="rainbow of food pic"/>
+                <div class="why-text">
                 <h3>For Your Health</h3>
-               <span>Health detail</span>
+                <span>Health detail</span>
+                </div>
             </div>
         </div>
         
