--- a/whyvegan.html
+++ b/whyvegan.html
@@ -80,27 +80,62 @@
         <div class="row no-gutters">
             <div class="col-sm-4">
                 <img src="assets/images/baby-foxes-pixabay.jpg" class="why-pictures" alt="foxes pic"/>
-                <div class="why-text">
                 <h3>For the Animals</h3>
-               <span>animal detail</span>
+                <div class="why-text">
+                    <p class="text-overflow">
+                        lots of details
+                        zzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        xz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                        zzzzzzzzzzzzzzzzzzzzz
+                    </p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <img src="assets/images/nature-trees-unsplash.jpg" class="why-pictures" alt="nature trees pic"/>
-                <div class="why-text">
                 <h3>For the Planet</h3>
-               <span>Planet detail</span>
+                <div class="why-text">
+                    <p class="text-overflow">
+                         Planet detail
+                    </p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <img src="assets/images/rainbow-food-pexels.jpg" class="why-pictures" alt="rainbow of food pic"/>
-                <div class="why-text">
                 <h3>For Your Health</h3>
-                <span>Health detail</span>
+                <div class="why-text">
+                    <p class="text-overflow">
+                        Health detail
+                    </p>
                 </div>
             </div>
-        </div>
-        
+        </div>  
       </section>
     </div>
 
