padding and left justify for text

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -83,37 +83,11 @@
                 <h3>For the Animals</h3>
                 <div class="why-text">
                     <p class="text-overflow">
-                        lots of details
-                        zzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        xz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
-                        zzzzzzzzzzzzzzzzzzzzz
+                        Let me ask you a simple question, why do we eat a pig but love a dog? What makes a horse a pet 
+                        yet a sheep is a commodity?<br/>
+                        Animals are sentient beings
+
+
                     </p>
                 </div>
             </div>
