--- a/food.html
+++ b/food.html
@@ -77,7 +77,15 @@
     <!--------------------------- Main section - middle of page -->
     <div class="container-fluid">
       <section>
-        <div class="row">recipes</div>
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-9">
+                <div class="row">
+                    <div class="col-12"></div>
+                    <div class="col-12"></div>
+                </div>
+            </div>
+        </div>
       </section>
     </div>
 
