--- a/whyvegan.html
+++ b/whyvegan.html
@@ -25,13 +25,14 @@
     <!--------------------------- Header Section including logo and Navigation -->
     <header class="container-fluid">
       <nav class="navbar navbar-expand-sm navbar-light">
-        <a class="navbar-brand mr-auto" href="index.html"
-          ><img
+        <a class="navbar-brand mr-auto" href="index.html">
+            <img
             src="assets/images/vegan-logo.png"
             alt="vegan logo"
             height="70px"
-            width="70px"
-        /></a>
+            width="70px"/>
+        </a>
+        <div class="navbar d-none d-sm-block"><h1 id="why-h1">So why Go Vegan</h1></div>
         <button
           class="navbar-toggler btn btn-secondary"
           type="button"
@@ -39,14 +40,12 @@
           data-target="#navbarToggler"
           aria-controls="navbarToggler"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
           class="collapse navbar-collapse justify-content-end"
-          id="navbarToggler"
-        >
+          id="navbarToggler">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home </a>
