--- a/food.html
+++ b/food.html
@@ -77,12 +77,47 @@
     <!--------------------------- Main section - middle of page -->
     <div class="container-fluid">
       <section>
-        <div class="row">
-            <div class="col-sm-3"></div>
+        <div class="row recipe-row"> <!-- Recipe 1 -->
+            <div class="col-sm-3">
+            <a class="food-pic" href="#">
+                <img
+                src="assets/images/breakfast-oat-unsplash.jpg"
+                alt="oat breakfast"
+                height="100px"
+                width="200px"
+                />
+            </a>
+            </div>
             <div class="col-sm-9">
                 <div class="row">
-                    <div class="col-12"></div>
-                    <div class="col-12"></div>
+                    <div class="col-12">
+                    <h2>Breakfast Oats</h2>
+                    </div>
+                    <div class="col-12 food-text">
+                    <p>Yummy breakfast oats </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row recipe-row"> <!-- Recipe 2 -->
+            <div class="col-sm-3">
+            <a class="food-pic" href="#">
+                <img
+                src="assets/images/breakfast-oat-unsplash.jpg"
+                alt="oat breakfast"
+                height="100px"
+                width="200px"
+                />
+            </a>
+            </div>
+            <div class="col-sm-9">
+                <div class="row">
+                    <div class="col-12">
+                    <h2>Lunch ???</h2>
+                    </div>
+                    <div class="col-12 food-text">
+                    <p>whats for lunch </p>
+                    </div>
                 </div>
             </div>
         </div>
