changed how do food pic

--- a/index.html
+++ b/index.html
@@ -75,12 +75,10 @@
       </div>
     </header>
     <!--------------------------- Main section - middle of page -->
-    <div class="container-fluid">
-      <section>
+    <section class="container-fluid">
         <div class="row">home</div>
-      </section>
-    </div>
-
+    </section>
+    
     <!--------------------------- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
