--- a/whyvegan.html
+++ b/whyvegan.html
@@ -74,8 +74,7 @@
       </div>
     </header>
     <!--------------------------- Main section - middle of page -->
-    <div class="container-fluid">
-      <section>
+    <section class="container-fluid">
         <div class="row no-gutters">
             <div class="col-sm-4">
                 <img src="assets/images/baby-foxes-pixabay.jpg" class="why-pictures" alt="foxes pic"/>
@@ -109,10 +108,8 @@
                 </div>
             </div>
         </div>  
-      </section>
-    </div>
-
-    <!--------------------------- Footer Section -->
+    </section>
+ <!--------------------------- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
         <div class="col-sm-1 social-links">
