--- a/food.html
+++ b/food.html
@@ -75,57 +75,38 @@
       </div>
     </header>
     <!--------------------------- Main section - middle of page -->
-    <div class="container-fluid">
-      <section>
+     <section class="container-fluid">
         <div class="row recipe-row"> <!-- Recipe 1 -->
-            <div class="col-sm-3">
-            <a class="food-pic" href="#">
-                <img
-                src="assets/images/breakfast-oat-unsplash.jpg"
-                alt="oat breakfast"
-                height="100px"
-                width="200px"
-                />
-            </a>
-            </div>
+            <a href="#" class="col-sm-3 food-pic"></a>
             <div class="col-sm-9">
                 <div class="row">
                     <div class="col-12">
-                    <h2>Breakfast Oats</h2>
+                        <h2>Breakfast Oats</h2>
                     </div>
                     <div class="col-12 food-text">
-                    <p>Yummy breakfast oats </p>
+                        <p>Yummy breakfast oats </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row recipe-row"> <!-- Recipe 2 -->
-            <div class="col-sm-3">
-            <a class="food-pic" href="#">
-                <img
-                src="assets/images/breakfast-oat-unsplash.jpg"
-                alt="oat breakfast"
-                height="100px"
-                width="200px"
-                />
-            </a>
-            </div>
+            <a href="#" class="col-sm-3 food-pic"></a>
             <div class="col-sm-9">
                 <div class="row">
                     <div class="col-12">
-                    <h2>Lunch ???</h2>
+                        <h2>Lunch meal</h2>
                     </div>
                     <div class="col-12 food-text">
-                    <p>whats for lunch </p>
+                        <p>Whats for lunch</p>
                     </div>
                 </div>
             </div>
         </div>
-      </section>
-    </div>
+    </section>
 
-    <!--------------------------- Footer Section -->
-    <footer class="container-fluid">
+    
+<!--------------------------- Footer Section -->
+    <footer class="container-fluid no-gutters">
       <div class="row footer-row">
         <div class="col-sm-1 social-links">
           <a href="join.html" 
