--- a/food.html
+++ b/food.html
@@ -77,12 +77,12 @@
     <!--------------------------- Main section - middle of page -->
      <section class="container-fluid">
         <div class="row recipe-row"> <!-- Recipe 1 -->
-            <a href="#" class="col-sm-4 food-pic"></a>
-            <div class="col-sm-8">
+            <a href="#" class="col-md-4 food-pic"></a>
+            <div class="col-md-8">
                 <div class="row">
-                    <div class="col-12">
-                        <h2>Breakfast Oats</h2>
-                    </div>
+                   
+                        <h2 class="col-12">Breakfast Oats</h2>
+                   
                     <div class="col-12 food-text">
                         <p>Yummy breakfast oats </p>
                     </div>
@@ -90,8 +90,8 @@
             </div>
         </div>
         <div class="row recipe-row"> <!-- Recipe 2 -->
-            <a href="#" class="col-sm-4 food-pic"></a>
-            <div class="col-sm-8">
+            <a href="#" class="col-md-4 food-pic"></a>
+            <div class="col-md-8">
                 <div class="row">
                     <div class="col-12">
                         <h2>Lunch meal</h2>
