--- a/join.html
+++ b/join.html
@@ -75,8 +75,9 @@
       </div>
     </header>
     <!--------------------------- Main section - middle of page -->
-    <section class="container-fluid">
-        <div class="row">Join</div>
+    <section id="frog-outer">
+        <div id="frog-pic"></div>
+          
     </section>
   
     <!--------------------------- Footer Section -->
@@ -114,7 +115,7 @@
       </div>
     </footer>
 
-    <!--------------------------- Do I need these? -->
+<!--------------------------- Required for Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
