--- a/challenge.html
+++ b/challenge.html
@@ -58,7 +58,7 @@
               <a class="nav-link" href="food.html">Recipe </a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="join.html">Challenge </a>
+              <a class="nav-link" href="challenge.html">Challenge </a>
             </li>
           </ul>
         </div>
