--- a/food.html
+++ b/food.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="whyvegan.html">Why </a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="food.html">Recipe </a>
+              <a class="nav-link" href="challenge.html">Recipe </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="join.html">Challenge </a>
