--- a/whyvegan.html
+++ b/whyvegan.html
@@ -57,7 +57,7 @@
               <a class="nav-link" href="food.html">Recipe </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="join.html">Challenge </a>
+              <a class="nav-link" href="challenge.html">Challenge </a>
             </li>
           </ul>
         </div>
