--- a/food.html
+++ b/food.html
@@ -109,7 +109,7 @@
     <footer class="container-fluid no-gutters">
       <div class="row footer-row">
         <div class="col-sm-1 social-links">
-          <a href="join.html" 
+          <a href="challenge.html"
             ><i class="fa fa-paper-plane" aria-hidden="true"></i>
             <span class="sr-only">Contact</span></a
           >
