initial add of home Ready to start button

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                     If you are you are in the right place<br/>
         
                     </p>
-                <div class="pic-box Ready-button">
+                <div class="pic-box">
+                    <a class="btn btn-lg" id="ready-btn" href="challenge.html" role="button">Ready to Start</a>
                 </div>
             </div>
         </div> 
