add margin to h2 header

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                     <a class="btn btn-lg" id="ready-btn" href="challenge.html" role="button">Ready to Start</a>
                 </div>
             </div>
+            <div class="col-sm-3 d-none d-sm-block">
+            </div>
         </div> 
         </div>
         
