--- a/whyvegan.html
+++ b/whyvegan.html
@@ -32,7 +32,6 @@
             height="70px"
             width="70px"/>
         </a>
-        <div class="navbar d-none d-sm-block"><h1 id="why-h1">So why Go Vegan</h1></div>
         <button
           class="navbar-toggler btn btn-secondary"
           type="button"
@@ -75,6 +74,9 @@
     </header>
     <!--------------------------- Main section - middle of page -->
     <section class="container-fluid">
+        <div class="row no-gutters">
+            <div class="col-12 d-none d-sm-block"><h1 id="why-h1">So why Go Vegan?</h1></div>
+        </div>
         <div class="row no-gutters">
             <div class="col-sm-4">
                 <img src="assets/images/baby-foxes-pixabay.jpg" class="why-pictures" alt="foxes pic"/>
