--- a/index.html
+++ b/index.html
@@ -76,14 +76,13 @@
     </header>
     <!--------------------------- Main section - middle of page -->
     <section class="container-fluid">
-         <div class="row">
-           
-                <div class="col-sm-4 d-none d-sm-block">
-                    <h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3>
-                </div>
-               <div class="col-sm-4  pig-pic">
-                    <a href="whyvegan.html" ></a>
-                </div>  
+         <div class="row no-gutters">
+            <div class="col-sm-4 d-none d-sm-block">
+                <h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3>
+            </div>
+            <div class="col-sm-4  pig-pic">
+               <a href="whyvegan.html" ></a>
+            </div>  
          </div>
           <div class="row">
                 <div class="col-sm-4 basic-details">
