added more rem and set z-index so basic on top of pic

--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
     </header>
     <!--------------------------- Main section - middle of page -->
     <section class="container-fluid">
-         <div class="row no-gutters">
+         <div class="row justify-content-between">
             <div class="col-sm-4 d-none d-sm-block">
                 <h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3>
             </div>
-            <div class="col-sm-4  pig-pic">
+            <div class="col-sm-6 pig-pic">
                <a href="whyvegan.html" ></a>
             </div>  
          </div>
           <div class="row">
-                <div class="col-sm-4 basic-details">
-                    <p class="col-sm-6"><b>So are you curious about what going Vegan means?</b><br/>
+                <div class=" col-sm-5 basic-details">
+                    <p><b>So are you curious about what going Vegan means?</b><br/>
                           If you are you are in the right place<br/>
         
                     </p>
