trying some footer and frog options

--- a/challenge.html
+++ b/challenge.html
@@ -75,7 +75,7 @@
       </div>
     </header>
     <!--------------------------- Main section - middle of page -->
-    <section id="frog-outer">
+    <section class="container-fluid" id="frog-outer">
         <div id="frog-pic"></div>
           
     </section>
