--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section class="container-fluid">
         <div class="d-flex align-items-center flex-column mb-3" >
             <div class="p-2 pig-pic"><a href="whyvegan.html" ></a></div> 
-            <div class="p-2"><h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3></div>
+            <div class="p-2 d-none d-sm-block"><h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3></div>
             <div class="p-2 basic-details">
                 <p><b>So are you curious about what going Vegan means?</b><br/>
                           If you are you are in the right place<br/>
