--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <!--------------------------- Main section - middle of page -->
     <section class="container-fluid">
         <div class="d-flex align-items-center flex-column mb-3" >
-            <div class="p-2 pig-pic"><a href="whyvegan.html" ></a></div> 
-            <div class="p-2 d-none d-sm-block"><h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3></div>
-            <div class="p-2 basic-details">
+            <div class="p-2 ml-auto pig-pic"><a href="whyvegan.html" ></a></div> 
+            <div class="p-2 mr-auto d-none d-sm-block"><h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3></div>
+            <div class="p-2 mr-auto basic-details">
                 <p><b>So are you curious about what going Vegan means?</b><br/>
                           If you are you are in the right place<br/>
         
