--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <div class="p-2 d-none d-sm-block together-block"><h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3></div>
             <div class="p-2 ml-auto" id="pig-pic"><a href="whyvegan.html" ></a></div>  
         </div>
-        <div class="d-flex align-items-center flex-column mb-3" >
-            <div class="p-2 mr-auto basic-details">
+        <div class="d-flex justify-content-sm-center flex-column mb-3" >
+            <div class="p-2 mr-sm-auto" id="basic-details">
                 <p><b>So are you curious about what going Vegan means?</b><br/>
                       If you are you are in the right place<br/>
         
