change why pictures to be url in style

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -78,8 +78,7 @@
             <div class="col-12 d-none d-sm-block"><h1 id="why-h1">So why Go Vegan?</h1></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-sm-4">
-                <img src="assets/images/baby-foxes-pixabay.jpg" class="why-pictures" alt="foxes pic"/>
+            <div class="col-sm-4 why-pictures" id="fox-pic">
                 <h3>For the Animals</h3>
                 <div class="why-text">
                     <p class="text-overflow">
@@ -91,8 +90,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <img src="assets/images/nature-trees-unsplash.jpg" class="why-pictures" alt="nature trees pic"/>
+            <div class="col-sm-4 why-pictures" id="nature-pic">
                 <h3>For the Planet</h3>
                 <div class="why-text">
                     <p class="text-overflow">
@@ -100,8 +98,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <img src="assets/images/rainbow-food-pexels.jpg" class="why-pictures" alt="rainbow of food pic"/>
+           <div class="col-sm-4 why-pictures" id="rainbow-pic">
                 <h3>For Your Health</h3>
                 <div class="why-text">
                     <p class="text-overflow">
