--- a/whyvegan.html
+++ b/whyvegan.html
@@ -78,32 +78,40 @@
             <div class="col-12 d-none d-sm-block"><h1 id="why-h1">So why Go Vegan?</h1></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-sm-4 why-pictures" id="fox-pic">
-                <h3>For the Animals</h3>
-                <div class="why-text">
-                    <p class="text-overflow">
-                        Let me ask you a simple question, why do we eat a pig but love a dog? What makes a horse a pet 
-                        yet a sheep is a commodity?<br/>
-                        Animals are sentient beings
-
-
-                    </p>
+            <div class="col-sm-4">
+                <div class="d-flex flex-sm-column">
+                    <div class="why-pictures" id="fox-pic"></div>
+                    <div class="p-2"><h3>For the Animals</h3></div>
+                    <div class="p-2 why-text">
+                        <p class="text-overflow">
+                            Let me ask you a simple question, why do we eat a pig but love a dog? What makes a horse a pet 
+                             yet a sheep is a commodity?<br/>
+                             Animals are sentient beings
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="col-sm-4 why-pictures" id="nature-pic">
-                <h3>For the Planet</h3>
-                <div class="why-text">
-                    <p class="text-overflow">
-                         Planet detail
-                    </p>
+            <div class="col-sm-4">
+                <div class="d-flex flex-sm-column">
+                    <div class="why-pictures" id="nature-pic"></div>
+                    <div class="p-2"><h3>For the Planet</h3></div>
+                    <div class="p-2 why-text">
+                        <p class="text-overflow">
+                             Planet detail
+                        </p>
+                    </div>
                 </div>
             </div>
-           <div class="col-sm-4 why-pictures" id="rainbow-pic">
-                <h3>For Your Health</h3>
-                <div class="why-text">
-                    <p class="text-overflow">
-                        Health detail
-                    </p>
+            
+            <div class="col-sm-4">
+                <div class="d-flex flex-sm-column">
+                    <div class="why-pictures" id="rainbow-pic"></div>
+                    <div class="p-2"><h3>For Your Health</h3></div>
+                    <div class="why-text">
+                        <p class="text-overflow">
+                            Health detail
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>  
