added padding to top and bottom of why

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -79,23 +79,24 @@
         </div>
         <div class="row no-gutters">
             <div class="col-sm-4">
-                <div class="d-flex flex-sm-column">
+                <div class="d-flex flex-column">
                     <div class="why-pictures" id="fox-pic"></div>
-                    <div class="p-2"><h3>For the Animals</h3></div>
-                    <div class="p-2 why-text">
+                    <div class="py-2"><h3>For the Animals</h3></div>
+                    <div class="py-2 why-text">
                         <p class="text-overflow">
-                            Let me ask you a simple question, why do we eat a pig but love a dog? What makes a horse a pet 
-                             yet a sheep is a commodity?<br/>
-                             Animals are sentient beings
+                            Let me ask you a simple question, why do we eat a pig but love a dog? <br/>
+                            What makes a horse a pet yet a sheep is a commodity?<br/>
+                            Animals are sentient beings, they feel joy and pain, they protect their young and feel 
+                            loss when their babies are taken away form them
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-4">
-                <div class="d-flex flex-sm-column">
+                <div class="d-flex flex-column">
                     <div class="why-pictures" id="nature-pic"></div>
-                    <div class="p-2"><h3>For the Planet</h3></div>
-                    <div class="p-2 why-text">
+                    <div class="py-2"><h3>For the Planet</h3></div>
+                    <div class="py-2 why-text">
                         <p class="text-overflow">
                              Planet detail
                         </p>
@@ -104,10 +105,10 @@
             </div>
             
             <div class="col-sm-4">
-                <div class="d-flex flex-sm-column">
+                <div class="d-flex flex-column">
                     <div class="why-pictures" id="rainbow-pic"></div>
-                    <div class="p-2"><h3>For Your Health</h3></div>
-                    <div class="why-text">
+                    <div class="py-2"><h3>For Your Health</h3></div>
+                    <div class="py-2 why-text">
                         <p class="text-overflow">
                             Health detail
                         </p>
