--- a/whyvegan.html
+++ b/whyvegan.html
@@ -20,6 +20,7 @@
     ></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Lets Go Vegan</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
   </head>
   <body>
     <!--------------------------- Header Section including logo and Navigation -->
