--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <!--------------------------- Main section - middle of page -->
     <section class="container-fluid">
         <div class="d-flex justify-content-sm-center mb-3" >
-            <div class="p-2 d-none d-sm-block together-block"><h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3></div>
-            <div class="p-2 ml-auto" id="pig-pic"><a href="whyvegan.html" ></a></div>  
+            <div class="mr-5 d-none d-sm-block together-block"><h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3></div>
+            <div class="ml-5 mr-5" id="pig-pic"><a href="whyvegan.html" ></a></div>  
         </div>
         <div class="d-flex justify-content-sm-center flex-column mb-3" >
             <div class="p-2 mr-sm-auto" id="basic-details">
