--- a/challenge.html
+++ b/challenge.html
@@ -90,9 +90,13 @@
                     <label for="email">
                         <input class="text-input" id="email" type="email" placeholder="Email Address" name="email_address" required>
                     </label>
-                    <label for="email">
-                        <input class="text-input" id="cemail" type="email" placeholder=" Confirm Email Address" name="cemail_address" required><br/>
+                    <label for="cemail"> 
+                        <input class="text-input" id="cemail" type="email" placeholder="Confirm Email Address" name="cemail_address" required>
                     </label>
+                    <br/>
+                    <label for="date">Please select Challange Start Date</label>
+                    <input class="text-input" id="sdate" type="date" placeholder=" Please select Challange Start Date" name="start_date" required>
+                    <br/>
               <!-- Drop Down Selection for form --> 
                     <label for="daily">Select communication Option</label>
                     <select id="communication" name="comlist" form="signup-form">
