--- a/challenge.html
+++ b/challenge.html
@@ -78,8 +78,9 @@
 <!--------------------------- Main section - middle of page -->
     <section class="container-fluid" id="frog-outer">
         <div id="frog-pic">
-        
-            <form class="signup-form" action="https://formdump.codeinstitute.net/" method="post">
+        <div class="row">
+        <div class="offset-sm-5">
+            <form class="signup-form">
                 <h2>Challange Sign-Up</h2>
                      <label for="fname">
                          <input class="text-input" id="fname" type="text" placeholder="First Name" name="first_name" required>
@@ -94,20 +95,24 @@
                         <input class="text-input" id="cemail" type="email" placeholder="Confirm Email Address" name="cemail_address" required>
                     </label>
                     <br/>
-                    <label for="date">Please select Challange Start Date</label>
-                    <input class="text-input" id="sdate" type="date" placeholder=" Please select Challange Start Date" name="start_date" required>
+                    <label class="comm-option" for="date">Challange Start Date</label>
+                    <br/>
+                    <input class="text-input support-option" id="sdate" type="date" name="start_date" required>
                     <br/>
               <!-- Drop Down Selection for form --> 
-                    <label for="daily">Select communication Option</label>
-                    <select id="communication" name="comlist" form="signup-form">
-                        <option value="none">No Support Required</option>
+                    <label class="comm-option" for="daily">How Often Can we Contact You</label>
+                    <br/>
+                    <select class="text-input support-option" name="comlist" form="signup-form">
                         <option value="daily">Daily Email Support</option>
                         <option value="weekly">Weekly Email Support</option>
+                        <option value="none">No Support Required</option>
                     </select>
                     <br/>
                     <br/>
                     <input class="join-button" type="submit" value="Lets Begin">
             </form>
+            </div>
+        </div>
         </div>
    </section> 
   
