--- a/challenge.html
+++ b/challenge.html
@@ -79,18 +79,21 @@
     <section class="container-fluid" id="frog-outer">
         <div id="frog-pic">
         <div class="row">
-        <div class="offset-sm-5">
+        <div class="col-sm-6 ml-sm-auto">
             <form class="signup-form">
-                <h2>Challange Sign-Up</h2>
+                <h2>Challenge Sign-Up</h2>
                      <label for="fname">
                          <input class="text-input" id="fname" type="text" placeholder="First Name" name="first_name" required>
                     </label>
+                    <br/>
                     <label for="lname">
                         <input class="text-input" id="lname" type="text" placeholder="Last Name" name="last_name" required>
                     </label>
+                    <br/>
                     <label for="email">
                         <input class="text-input" id="email" type="email" placeholder="Email Address" name="email_address" required>
                     </label>
+                    <br/>
                     <label for="cemail"> 
                         <input class="text-input" id="cemail" type="email" placeholder="Confirm Email Address" name="cemail_address" required>
                     </label>
