--- a/whyvegan.html
+++ b/whyvegan.html
@@ -108,7 +108,7 @@
             <div class="col-sm-4">
                 <div class="d-flex flex-column">
                     <div class="why-pictures" id="rainbow-pic"></div>
-                    <div class="py-2"><h3>For Your Health</h3></div>
+                    <div class="py-2"><h3>For your Health</h3></div>
                     <div class="py-2 why-text">
                         <p class="text-overflow">
                             Health detail
