--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section class="container-fluid">
         <div class="d-flex justify-content-sm-center mb-3" >
             <div class="mr-5 d-none d-sm-block together-block"><h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3></div>
-            <div class="ml-5 mr-5" id="pig-pic"><a href="whyvegan.html"> </a></div>
+            <div class="ml-sm-5 mr-sm-5" id="pig-pic"><a href="whyvegan.html"> </a></div>
         </div>
         <div class="d-flex justify-content-sm-center flex-column mb-3" >
             <div class="p-2 mr-sm-auto" id="basic-details">
