--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
             <div class="ml-sm-5 mr-sm-5" id="pig-pic"><a href="whyvegan.html"> </a></div>
         </div>
         <div class="d-flex justify-content-sm-center flex-column mb-3" >
-            <div class="p-2 mr-sm-auto" id="basic-details">
+            <div class="p-2 " id="basic-details">
                 <p><b>So are you curious about what going Vegan means?</b><br/>
                       If you are you are in the right place<br/>
         
                 </p>
             </div>
-            <div class="p-2"><a class="btn btn-lg" id="ready-btn" href="challenge.html" role="button">Ready to Start</a></div>
+            <div class="p-2"><a class="btn btn-sm" id="ready-btn" href="challenge.html" role="button">Ready to Start</a></div>
         </div>
    </section>
     
