--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!--------------------------- Main section - middle of page -->
     <section class="container-fluid">
    
-        <div class="d-flex justify-content-center flex-sm-shrink-1" >
+        <div class="d-flex justify-content-center" >
             <div class="mr-5 d-none d-sm-block together-block"><h3 id="together"><a href="whyvegan.html" >Lets Go Vegan Together</a></h3></div>
             <div class="ml-sm-5 mr-sm-5" id="pig-pic"><a href="whyvegan.html"> </a></div>
         </div>
