some styling for home large screens

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         
                 </p>
             </div>
-            <div class="p-2"><a class="btn btn-sm" id="ready-btn" href="challenge.html" role="button">Ready to Start</a></div>
+            <div><a class="btn btn-sm center-block" id="ready-btn" href="challenge.html" role="button">Ready to Start</a></div>
         </div>
     
    </section>
