move scripts all together all pages

--- a/challenge.html
+++ b/challenge.html
@@ -14,10 +14,6 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/15a3b949c3.js"
-      crossorigin="anonymous"
-    ></script>
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Lets Go Vegan</title>
      <link rel="shortcut icon" type="image/png" href="favicon.png">
@@ -154,7 +150,8 @@
       </div>
     </footer>
   
-<!--------------------------- Required for Bootstrap JS -->
+<!--------------------------- Required for Bootstrap JS & keep all scripts together -->
+    <script src="https://kit.fontawesome.com/15a3b949c3.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
