--- a/challenge.html
+++ b/challenge.html
@@ -118,7 +118,7 @@
 <!--------------------------- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
-        <div class="col-sm-1 social-links">
+        <div class="col-sm-1 d-none d-sm-block social-links">
           <a href="challenge.html" 
             ><i class="fa fa-paper-plane" aria-hidden="true"></i>
             <span class="sr-only">Contact</span></a
