change plane to envelope for all pages footer

--- a/challenge.html
+++ b/challenge.html
@@ -120,7 +120,7 @@
       <div class="row footer-row">
         <div class="col-sm-1 d-none d-sm-block social-links">
           <a href="challenge.html" 
-            ><i class="fa fa-paper-plane" aria-hidden="true"></i>
+            ><i class="fa fa-envelope-open-text" aria-hidden="true"></i>
             <span class="sr-only">Contact</span></a
           >
         </div>
