--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
                       <br/>
                       </p>
                 </div>
-            <div><a class="btn btn-sm" id="ready-btn" href="challenge.html" role="button">Ready to Start</a></div>
+            <div>
+                <a class="btn btn-sm" id="ready-btn" href="challenge.html" role="button">Ready to Start</a>
+            </div>
         </div>
     
    </section>
@@ -103,7 +105,7 @@
       <div class="row footer-row">
         <div class="col-sm-1 d-none d-sm-block social-links">
           <a href="challenge.html"
-            ><i class="fa fa-paper-plane" aria-hidden="true"></i>
+            ><i class="fa fa-envelope-open-text" aria-hidden="true"></i>
             <span class="sr-only">Challange</span></a
           >
         </div>
