--- a/whyvegan.html
+++ b/whyvegan.html
@@ -84,7 +84,7 @@
                             Let me ask you a simple question, why do we eat a pig but love a dog? <br/>
                             What makes a horse a pet yet a sheep is a commodity?<br/>
                             Animals are sentient beings, they feel joy and pain, they protect their young and feel 
-                            loss when their babies are taken away form them
+                            loss when their babies are taken away from them
                         </p>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
       <div class="row footer-row">
         <div class="col-sm-1 d-none d-sm-block social-links">
           <a href="challenge.html" 
-            ><i class="fa fa-paper-plane" aria-hidden="true"></i>
+            ><i class="fa fa-envelope-open-text" aria-hidden="true"></i>
             <span class="sr-only">Contact</span></a
           >
         </div>
