on mobile smaller button and centre and re-adjust large screen

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                       <br/>
                       </p>
                 </div>
-            <div>
+            <div id="center-btn">
                 <a class="btn btn-sm" id="ready-btn" href="challenge.html" role="button">Ready to Start</a>
             </div>
         </div>
