amend challange size layout change and amend margins

--- a/challenge.html
+++ b/challenge.html
@@ -75,7 +75,7 @@
     <section class="container-fluid" id="frog-outer">
         <div id="frog-pic">
             <div class="row">
-                <div class="col-md-6 ml-md-auto">
+                <div class="col-lg-6 ml-lg-auto">
                     <form class="signup-form">
                         <h2>Challenge Sign-Up</h2>
                         <!-- Label wrap for better spacing -->
