add links to youtube in for animals text

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -101,7 +101,9 @@
                             If you would like to do some of your own research, I love these 2 guys for their calm approach and 
                             their message and debunking of many of the industry's myths. 
                             <br/>
-                            Earling Ed and Mick the Vegan
+                             <a href="https://www.youtube.com/channel/UCVRrGAcUc7cblUzOhI1KfFg" target="_blank"><span class="sr-only">Earthling Ed</span>Earthling Ed</a>
+                             and
+                              <a href="https://www.youtube.com/channel/UCGJq0eQZoFSwgcqgxIE9MHw" target="_blank"><span class="sr-only">Mick the Vegan</span>Mick the Vegan</a>
                             <br/>
                         </p>
                     </div>
