remove text decoration from recipe h2

--- a/food.html
+++ b/food.html
@@ -81,7 +81,7 @@
                         <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
                     </div>
                     <div class="col-md-8">
-                        <a class="recipe-title" href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
+                        <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
                         <div class="food-text">
                             <p>Simple to make and perfect to take to work</p>
                         </div>
@@ -94,7 +94,7 @@
                         <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
                     </div>
                     <div class="col-md-8">
-                        <a class="recipe-title" href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
+                        <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
                         <div class="food-text">
                             <p>Simple to make and perfect to take to work</p>
                         </div>
@@ -110,7 +110,7 @@
                         <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
                     </div>
                     <div class="col-md-8">
-                        <a class="recipe-title" href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
+                        <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
                         <div class="food-text">
                             <p>Simple to make and perfect to take to work</p>
                         </div>
@@ -123,7 +123,7 @@
                         <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
                     </div>
                     <div class="col-md-8">
-                        <a class="recipe-title" href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
+                        <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
                         <div class="food-text">
                             <p>Simple to make and perfect to take to work</p>
                         </div>
