added pancake recipe

--- a/food.html
+++ b/food.html
@@ -78,7 +78,7 @@
             <div class="col-md-6"><!-- Mango Chia Pudding -->
                 <div class="row"> 
                     <div class="col-md-4">
-                        <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
+                        <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="Mango Chia Pudding" />
                     </div>
                     <div class="col-md-8 align-self-center">
                         <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
@@ -91,12 +91,12 @@
             <div class="col-md-6"><!-- Mango Chia Pudding -->
                 <div class="row"> 
                     <div class="col-md-4">
-                        <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
+                        <img class="food-pic" src="assets/images/pancakes-pexels.jpg" alt="Pancakes" />
                     </div>
                     <div class="col-md-8  align-self-center">
-                        <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
+                        <a href="/assets/recipes/pancakes.pdf" target="_blank"><h2>Pancakes</h2></a>    
                         <div class="food-text">
-                            <p>Simple to make and perfect to take to work</p>
+                            <p>For that luxury feeling that no way is this vegan!!!!</p>
                         </div>
                     </div>
                 </div>
