add egg sandwich to recipe

--- a/food.html
+++ b/food.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6"><!-- Mango Chia Pudding -->
+            <div class="col-md-6"><!-- Pancakes -->
                 <div class="row"> 
                     <div class="col-md-4">
                         <img class="food-pic" src="assets/images/pancakes-pexels.jpg" alt="Pancakes" />
@@ -104,15 +104,15 @@
         </div>
 <!-- Row contains 2 recipes on larger screen -->
      <div class="row recipe-row"> 
-            <div class="col-md-6"><!-- Mango Chia Pudding -->
+            <div class="col-md-6"><!-- Egg Salad Sandwich -->
                 <div class="row"> 
                     <div class="col-md-4">
-                        <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
+                        <img class="food-pic" src="assets/images/vegan-egg-internet.jpg" alt="Egg Salad Sandwich" />
                     </div>
                     <div class="col-md-8 align-self-center">
-                        <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
+                        <a href="/assets/recipes/egg-salad-sandwich.pdf" target="_blank"><h2>Egg Salad Sandwich</h2></a>    
                         <div class="food-text">
-                            <p>Simple to make and perfect to take to work</p>
+                            <p>No need to miss your favourite lunch time sandwich</p>
                         </div>
                     </div>
                 </div>
