added aubergine curry to recipes

--- a/food.html
+++ b/food.html
@@ -131,6 +131,35 @@
                 </div>
             </div>
         </div>
+        <!-- Row contains 2 recipes on larger screen -->
+     <div class="row recipe-row"> 
+            <div class="col-md-6"><!-- Roasted Aubergine & Chickpea Curry -->
+                <div class="row"> 
+                    <div class="col-md-4">
+                        <img class="food-pic" src="assets/images/aubergine-chickpea-internet.jpg" alt="Roasted Aubergine & Chickpea Curry" />
+                    </div>
+                    <div class="col-md-8 align-self-center">
+                        <a href="/assets/recipes/aubergine-chickpea-curry.pdf" target="_blank"><h2>Roasted Aubergine & Chickpea Curry</h2></a>    
+                        <div class="food-text">
+                            <p>Roasted Aubergine has the most wonderful flavour, this curry is well worth the effort</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6"><!-- Sun-dried Tomato Pesto Hummus -->
+                <div class="row"> 
+                    <div class="col-md-4">
+                        <img class="food-pic" src="assets/images/sundried-tomato-pesto-internet.jpg" alt="Sun-dried Tomato Pesto Hummus" />
+                    </div>
+                    <div class="col-md-8  align-self-center">
+                        <a href="/assets/recipes/sun-dried-tomato-pesto.pdf" target="_blank"><h2>Sun-dried Tomato Pesto Hummus</h2></a>    
+                        <div class="food-text">
+                            <p>This pesto hummus can be served on a sandwich over pasta or with a beautuful salad</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     
